# reduce

./: Cargo.toml  build.rs  reduce.rc  run
src/: error.rs  event.rs  image.rs  main.rs  open.rs  state.rs  ui.rs  window.rs
