[package]
name = "reduce"
version = "0.1.0"
authors = ["Giles Edkins <edkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.7", features = ["commdlg","winuser","windef","minwindef","libloaderapi"]}

[build-dependencies]
embed-resource = "1.3"
